--- a/package.json
+++ b/package.json
@@ -16,14 +16,17 @@
     "bootstrap": "^5.1.3",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.1",
+    "react-cloudinary-lazy-image": "^1.3.4",
     "react-dark-mode-toggle": "^0.2.0",
     "react-dom": "^17.0.2",
     "react-hot-toast": "^2.2.0",
     "react-icons": "^4.3.1",
     "react-intersection-observer": "^8.33.1",
+    "react-lazy-load-image-component": "^1.5.5",
     "react-scripts": "5.0.0",
     "react-scroll": "^1.8.4",
     "react-scroll-to-top": "^1.0.8",
+    "react-spinners": "^0.13.4",
     "react-text-transition": "^1.3.0",
     "styled-components": "^5.3.5",
     "web-vitals": "^2.1.3"
